<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_tv">"My Nanodegree Apps!"</string>
    <string name="spotify_button">Spotify Streamer</string>
    <string name="scores_button">Scores App</string>
    <string name="library_button">Library App</string>
    <string name="bigger_button">Build It Bigger</string>
    <string name="reader_button">XYZ Reader</string>
    <string name="capstone_button">Capstone: My Own App</string>
</resources>
