<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tv"
        android:id="@+id/title_tv"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="26dp" />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/spotify_button"
        android:id="@+id/spotify_btn"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="33dp"
        android:background="@color/button_material_light"
        android:layout_alignLeft="@+id/title_tv"
        android:layout_alignStart="@+id/title_tv"
        android:layout_alignRight="@+id/title_tv"
        android:layout_alignEnd="@+id/title_tv"
        android:elevation="5dp" />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/scores_button"
        android:id="@+id/scores_btn"
        android:background="@color/button_material_light"
        android:layout_below="@+id/spotify_btn"
        android:layout_alignLeft="@+id/spotify_btn"
        android:layout_alignStart="@+id/spotify_btn"
        android:layout_alignRight="@+id/spotify_btn"
        android:layout_alignEnd="@+id/spotify_btn"
        android:elevation="5dp" />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/library_button"
        android:id="@+id/library_btn"
        android:background="@color/button_material_light"
        android:layout_below="@+id/scores_btn"
        android:layout_alignLeft="@+id/scores_btn"
        android:layout_alignStart="@+id/scores_btn"
        android:layout_alignRight="@+id/scores_btn"
        android:layout_alignEnd="@+id/scores_btn"
        android:elevation="5dp"
        android:minHeight="@dimen/abc_action_button_min_height_material" />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/bigger_button"
        android:id="@+id/bigger_btn"
        android:background="@color/button_material_light"
        android:layout_below="@+id/library_btn"
        android:layout_alignRight="@+id/library_btn"
        android:layout_alignEnd="@+id/library_btn"
        android:layout_alignLeft="@+id/library_btn"
        android:layout_alignStart="@+id/library_btn"
        android:elevation="5dp"
        />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/reader_button"
        android:id="@+id/reader_btn"
        android:background="@color/button_material_light"
        android:layout_below="@+id/bigger_btn"
        android:layout_alignLeft="@+id/bigger_btn"
        android:layout_alignStart="@+id/bigger_btn"
        android:layout_alignRight="@+id/bigger_btn"
        android:layout_alignEnd="@+id/bigger_btn"
        android:elevation="5dp"
        />

    <Button style="@style/AppTheme.Button.custom"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_btn"
        android:background="@color/button_material_dark"
        android:layout_below="@+id/reader_btn"
        android:layout_alignLeft="@+id/reader_btn"
        android:layout_alignStart="@+id/reader_btn"
        android:layout_alignRight="@+id/reader_btn"
        android:layout_alignEnd="@+id/reader_btn"
        android:elevation="5dp"
        />
</RelativeLayout>
